feat: addition to eww config
Signed-off-by: V1337Q <SchweigendeEule@proton.me>

--- a/config/eww/colors.scss
+++ b/config/eww/colors.scss
@@ -5,6 +5,7 @@ $black: #485263;
 $red: #70A5EB;
 $green: #78DBA9;
 $yellow: #f1cf8a;
+$orange: #e9a180;
 $blue: #86aaec;
 $magenta: #c68aee;
 $cyan: #e26c7c;
