--- a/config/eww/eww.scss
+++ b/config/eww/eww.scss
@@ -13,6 +13,8 @@ tooltip {
 $bg: #171B20;
 $bg-alt: #78DBA9;
 $mc: #21262e;
+$mc3: #485263;
+$mc2: #242931;
 $fg: #b6beca;
 $black: #485263;
 $red: #e26c7c;
